fix list text wrap on mobile

--- a/resources/sass/components/_lists.scss
+++ b/resources/sass/components/_lists.scss
@@ -3,11 +3,12 @@
 .list {
   &--select {
     label {
-      display: block;
+      display: flex;
       text-align: left;
+      line-height: 1.4em;
       letter-spacing: 1px;
       border: 1px solid $color-divider;
-      padding: 20px;
+      padding: 15px 20px;
       overflow: hidden;
 
       &:hover {
@@ -25,7 +26,7 @@
         outline-offset: -9px;
         margin-left: -10px;
         margin-right: -10px;
-        padding: 20px 30px;
+        padding: 15px 30px;
 
         input[type="radio"]:before {
           content: "";
@@ -37,7 +38,7 @@
           margin-right: 10px;
           position: absolute;
           left: 55px;
-          top: 2px;
+          top: 8px;
         }
 
         input[type="radio"]:after {
@@ -64,6 +65,7 @@
       display: inline-block;
       position: relative;
       left: -60px;
+      margin-right: 10px;
 
       &:after {
         content: "";
@@ -75,7 +77,7 @@
         margin-right: 10px;
         position: relative;
         left: 50px;
-        top: -3px;
+        top: 3px;
       }
     }
   }
